# design_principles

./: .clang-tidy  CMakeLists.txt
construction_patterns/builder/: CMakeLists.txt  basic_builder.cpp  builder_exercise.cpp  groovy_builder.cpp  no_builder.cpp
construction_patterns/builder/basic_builder/: html_builder.cpp  html_builder.h  html_element.cpp  html_element.h
construction_patterns/builder/builder_exercise/: CodeBuilder.cpp  CodeBuilder.h
construction_patterns/builder/groovy_builder/: img.h  tag.h  tags.h
construction_patterns/builder/groovy_builder/basic/: basic.h  body.h  br.h  h.h  head.h  hr.h  html.h  p.h  title.h
construction_patterns/builder/groovy_builder/formatting/: abbr.h  address.h  b.h  bdi.h  bdo.h  blockquote.h  cite.h  code.h  del.h  formatting.h
principles/: CMakeLists.txt  dependency_inversion.cpp  interface_segregation.cpp  open_close.cpp
